[metadata]
name = django-sanitized-dump
version = 0.1.0
description = Sanitized sensitive information from your database dumps
long_description = file: README.md
keywords = django, database, sanitization, anonymization
url = https://github.com/andersinno/django-sanitized-dump
maintainer = Anders Innovations
maintainer_email = support@anders.fi
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Systems Administration

[options]
include_package_data = True
packages = find:
zip_safe = False
install_requires =
    pyyaml
    six

[prequ]
annotate = yes
requirements-dev =
    Django
    flake8
    flake8-isort
    flake8-print
    mock
    mock-open
    pep8-naming
    pycodestyle
    pytest
    pytest-cov
    pytest-django
    pyyaml
    setuptools-gitver
    tox

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist venv test_data

[flake8]
exclude = .tox,dist,venv
max-line-length = 120
max-complexity = 10

[isort]
include_trailing_comma=True
known_first_party=sanitized_dump
known_third_party=click,mock,pytest,six
line_length=80
multi_line_output=3
not_skip=__init__.py
skip=.tox,dist,venv

[pycodestyle]
line_length = 120

[coverage:run]
branch = True
source = tests/testapp,sanitized_dump
omit =
    *migrations*
    tests/test_*
